# olist_churn_prediction_v3

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  templet.py
config/: model.yaml  schema.yaml
notebooks/: data.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: fetch_data.py
src/entity/: artifact_entity.py  config_entity.py  s3_estimator.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
