
[project]
name = "src"
version = "0.0.1"
description = "This tool helps you to predict which customer will not buy product in 120 days after purchase on time."
readme = "README.md"
authors = [
  { name="Sourabh Pal", email="sourabhpal408@gmail.com" }
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "reuqirements.txt"}

